--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,11 @@
 {
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "command": {
     "bootstrap": {
       "hoist": true
     }
   },
-  "version": "0.0.1-alpha.0"
+  "version": "0.0.1"
 }
