--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^5.1.0"
+    "eslint": "^8.17.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "lerna": "^5.1.0",
+    "prettier": "^2.6.2"
+  },
+  "scripts": {
+    "test": "jest",
+    "lint": "eslint --ext .js packages/**/*.js --no-error-on-unmatched-pattern --fix"
   }
 }
