--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cli",
+  "name": "create",
   "version": "0.0.1",
   "description": "> TODO: description",
   "author": "Ludd <luddlu@humanbacker.com>",
